# MT-AutoOptimize

./: .env.example  .gitignore  README.md  app.py  environment.yml  pyproject.toml
cli/: app.py  banner.py  diff_renderer.py  repl.py
cli/commands/: context.py  memory.py  resume.py
cli/event_handlers/: stream.py
cli/ui/: input.py
cli/utils/: text.py
config/: __init__.py  settings.py
core/: agent.py  compressor.py  context.py  event_bus.py  graph.py  llm.py  session.py  state.py
core/nodes/: human_approval.py  observation.py  reasoning.py  tool_execution.py  tool_routing.py
core/utils/: diff.py  tokens.py
docs/: Architecture.md  Context&Memory.md  Context-Memory-Design.md  EventBus.md  PLAN.md  PROMPT.md  README.md  ReActLoop.md  Tools.md  dev-plan.md
prompts/: compression_prompt.py  system_prompt.py
tests/: conftest.py
tests/test_cli/: test_app.py  test_resume.py  test_stream_handler.py
tests/test_core/: test_context.py  test_human_approval.py  test_llm.py  test_observation.py  test_reasoning.py  test_tool_execution.py  test_tool_routing.py  test_tools.py
tools/: __init__.py  policy.py  registry.py
tools/agent_ops/: memory.py
tools/file_ops/: edit_file.py  glob.py  grep.py  ls.py  read_file.py  write_file.py
