[project]
name = "mt-autooptimize"
version = "0.1.0"
description = "MT-3000 coding agent"
requires-python = ">=3.10"
dependencies = [
    "langchain>=1.2.13",
    "langgraph>=1.1.3",
    "openai>=2.29.0",
]

[dependency-groups]
dev = [
    "ipython>=8.38.0",
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
]
