[project]
name = "mt-autooptimize"
version = "0.1.0"
description = "MT-3000 coding agent"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=1.2.13",
    "langchain-openai>=0.3.0",
    "langgraph>=1.1.3",
    "openai>=2.29.0",
    "rich>=14.3.3",
]

[dependency-groups]
dev = [
    "ipython>=8.38.0",
    "langsmith>=0.7.22",
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
]
